# real-time-fraud-detection-system-for-financial-transactions

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: dataset.md  index.md  overview-ds.md  overview-sde.md  overview.md
models/: final_xgb_with_threshold.joblib  scaler.joblib  xgboost_model.joblib
notebooks/: 00_dataset_overview.ipynb  01_data_exploration.ipynb  02_preprocessing_and_feature_engineering.ipynb  03_handle_imbalance_data.ipynb  04_baseline_models.ipynb  05_advanced_models.ipynb  06_threshold_optimization.ipynb  07_model_inference.ipynb  08_model_explainability.ipynb  09_api_performance_testing.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
real_time_fraud_detection_system_for_financial_transactions/: __init__.py  dataset.py  features.py  plots.py
real_time_fraud_detection_system_for_financial_transactions/modeling/: predict.py  train.py
reports/html/: 00_dataset_overview.html  01_data_exploration.html  05_advanced_models.html  06_threshold_optimization.html  08_model_explainability.html
src/api/: main.py  schemas.py  utils.py
src/config/: settings.py
src/data/: load.py  preprocess.py
src/explainability/: shap_utils.py
src/modeling/: baselines.py  evaluate.py  inference.py  predict.py  train.py
src/threshold/: optimize.py
src/ui/: app.py
src/utils/: metrics.py
tests/: test_data.py  test_data_validation.py  test_explainability.py  test_modelling.py
