[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "real_time_fraud_detection_system_for_financial_transactions"
version = "0.0.1"
description = "A system that detects fraudulent transactions in streaming data, using anomaly detection and alerting mechanisms. It processes live data feeds, apply machine learning models to flag suspicious activities, and integrate notifications via email/SMS."
authors = [
  { name = "Rajendran S" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10,<3.12"


[tool.ruff]
line-length = 99
src = ["real_time_fraud_detection_system_for_financial_transactions"]
include = ["pyproject.toml", "real_time_fraud_detection_system_for_financial_transactions/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["real_time_fraud_detection_system_for_financial_transactions"]
force-sort-within-sections = true

