[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "real-time-fraud-detection-system"
version = "0.0.1"
description = "A system that detects fraudulent transactions in streaming data using machine learning."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { file = "LICENSE" }

authors = [
  { name = "Rajendran S" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]


# -----------------------------
# setuptools configuration
# -----------------------------
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "notebooks*", "data*", "docs*"]


# -----------------------------
# pytest configuration
# -----------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"


# -----------------------------
# Ruff (linting + formatting)
# -----------------------------
[tool.ruff]
line-length = 99
src = ["src"]
target-version = "py311"
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # isort-style import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true


# -----------------------------
# Optional: Coverage (future)
# -----------------------------
[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
